# Hairy-Pigeon

Hairy Pigeon (Linux and Mac version)/: README.txt  example  example.hp  main.py  makefile  setup.py
Hairy Pigeon (Linux and Mac version)/CompilerParts/: CMakeLists.txt  SEIR.cpp  SEIRC.cpp  alloc.c  file.c  format.cpp  format.hpp  hairypidgeon.py  hp  onlyshowerr.c
Hairy Pigeon (Linux and Mac version)/CompilerParts/src/: buffer.hp  queue.hp
Hairy Pigeon (Linux and Mac version)/CompilerParts/test/: buffer_test.hp  queue_test.hp
Hairy Pigeon (Linux and Mac version)/testing/turbotest/: a.out  import.hp  main  main.hp  test.test  tmp  tmp.hp  tmp.sh  tmp98y3rg.sh
